Add Godot-specific .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,26 @@
 # Handle line endings
 * text=auto
 
-# Specific overrides
+# Scripts (Godot + general)
+*.gd text eol=lf
+*.cs text eol=lf
+
+# Godot scenes & resources
+*.tscn text eol=lf
+*.tres text eol=lf
+*.import text eol=lf
+*.godot text eol=lf
+
+# Shell scripts (Unix)
 *.sh text eol=lf
+
+# Windows batch scripts
 *.bat text eol=crlf
+
+# Binary files (no line ending conversion)
+*.png binary
+*.jpg binary
+*.ogg binary
+*.wav binary
+*.exe binary
+*.dll binary
