--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
-# Godot-specific
-.export/
+# Godot-specific ignores
+.godot/
 .import/
-*.import
-export.cfg
-export_presets.cfg
+.export/
+mono_crash.*
 
-# OS junk
+# User-specific files
+*.cfg
+*.log
+
+# Backup files
+*.tmp
+*.bak
+*.old
+*.orig
+
+# OS-specific files
 .DS_Store
 Thumbs.db
